feat: Implement mTLS for Kafka and Schema Registry with a new certificate generation script, and updated configurations.

--- a/defense_center/.env.example
+++ b/defense_center/.env.example
@@ -17,3 +17,7 @@ OPENSEARCH_INITIAL_ADMIN_PASSWORD=SecurePassword@123
 
 # OPENCTI_API is the API key used to authenticate the Defense Center with OpenCTI.
 # OPENCTI_API_KEY=
+
+# SSL_PASSWORD is the password used to secure SSL connections.
+SSL_PASSWORD=SecurePassword@123
+
