--- a/defense_center/conf/pipeline.conf
+++ b/defense_center/conf/pipeline.conf
@@ -1,11 +1,21 @@
 input {
     kafka {
-        bootstrap_servers => "broker:29092"
+        bootstrap_servers => "broker:19094"
+        bootstrap_servers => "broker:19094"
         topics => ["snort_alerts"]
         auto_offset_reset => "earliest"
         decorate_events => extended
         group_id => "mataelang-dc-logstash"
-        schema_registry_url => "http://schema-registry:8081"
+        schema_registry_url => "https://schema-registry:8081"
+        schema_registry_ssl_truststore_location => "/usr/share/logstash/config/truststore.jks"
+        schema_registry_ssl_truststore_password => "${SSL_TRUSTSTORE_PASSWORD}"
+        security_protocol => "SSL"
+        ssl_truststore_location => "/usr/share/logstash/config/truststore.jks"
+        ssl_truststore_password => "${SSL_TRUSTSTORE_PASSWORD}"
+        ssl_keystore_location => "/usr/share/logstash/config/logstash-keystore.jks"
+        ssl_keystore_password => "${SSL_KEYSTORE_PASSWORD}"
+        ssl_key_password => "${SSL_KEY_PASSWORD}"
+        ssl_endpoint_identification_algorithm => "HTTPS"
     }
 }
 
