--- a/defense_center/compose.yml
+++ b/defense_center/compose.yml
@@ -7,24 +7,59 @@ volumes:
   opensearch_data1:
 
 services:
+  broker-mtls-cert-generator:
+    image: eclipse-temurin:17-jre
+    working_dir: /work/scripts
+    restart: "no"
+    entrypoint: ["/bin/bash", "-lc"]
+    command: ["apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends openssl ca-certificates bash coreutils && rm -rf /var/lib/apt/lists/* && /bin/bash /work/scripts/generate-broker-mtls-certs.sh"]
+    environment:
+      - SSL_PASSWORD=${SSL_PASSWORD:-SecurePassword@123}
+      - CERT_VALIDITY_DAYS=365
+      - CERT_RENEW_THRESHOLD_DAYS=60
+    env_file:
+      - .env
+    volumes:
+      - ./scripts/generate-broker-mtls-certs.sh:/work/scripts/generate-broker-mtls-certs.sh:ro
+      - ./certs/ca-creds:/work/certs/ca-creds
+      - ./certs/truststore:/work/certs/truststore
+      - ./certs/broker-creds:/work/certs/broker-creds
+      - ./certs/schema-registry-creds:/work/certs/schema-registry-creds
+      - ./certs/kafka-ui-creds:/work/certs/kafka-ui-creds
+      - ./certs/event-stream-aggr-creds:/work/certs/event-stream-aggr-creds
+      - ./certs/sensor-api-creds:/work/certs/sensor-api-creds
+      - ./certs/logstash-creds:/work/certs/logstash-creds
+
   sensor-api:
     image: ghcr.io/mata-elang-stable/sensor-snort-service:latest
     command: "server -v"
     restart: unless-stopped
     depends_on:
-      - broker
-      - schema-registry
+      broker-mtls-cert-generator:
+        condition: service_completed_successfully
+        required: false
+      broker:
+        condition: service_started
+      schema-registry:
+        condition: service_started
     ports:
       - "50051:50051"
+    volumes:
+      - ./certs/ca-creds/ca.pem:/app/ca.pem:ro
+      - ./certs/sensor-api-creds/sensor-api.p12:/app/sensor-client.p12:ro
     environment:
       - MES_SERVER_HOST=0.0.0.0
       - MES_SERVER_PORT=50051
       - MES_SERVER_INSECURE=true
       - MES_SERVER_MAX_MESSAGE_SIZE=1024
-      - MES_SERVER_KAFKA_BROKERS=broker:29092
-      - MES_SERVER_SCHEMA_REGISTRY_URL=http://schema-registry:8081
+      - MES_SERVER_KAFKA_BROKERS=broker:19094
+      - MES_SERVER_SCHEMA_REGISTRY_URL=https://schema-registry:8081
       - MES_SERVER_KAFKA_GROUP_ID=sensor-api
       - MES_SERVER_KAFKA_TOPIC=sensor_events
+      - MES_SERVER_SECURITY_PROTOCOL=SSL
+      - MES_SERVER_PATH_TO_CA=/app/ca.pem
+      - MES_SERVER_PATH_TO_CLIENT_KEYSTORE=/app/sensor-client.p12
+      - MES_SERVER_CLIENT_KEYSTORE_PASSWORD=${SSL_PASSWORD:-SslSecurePassword@123}
     deploy:
       resources:
         limits:
@@ -32,58 +67,120 @@ services:
           memory: 512M
 
   broker:
-    image: confluentinc/cp-kafka:7.8.0
+    image: confluentinc/cp-kafka:8.1.0
     restart: unless-stopped
+    depends_on:
+      broker-mtls-cert-generator:
+        condition: service_completed_successfully
+        required: false
     environment:
+      - KAFKA_SSL_CLIENT_AUTH=required
       - KAFKA_NODE_ID=1
-      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092
+      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:SSL,SSL:SSL,SSL_HOST:SSL,EXTERNAL:SSL,EXTERNAL_HOST:SSL
+      - KAFKA_ADVERTISED_LISTENERS=SSL://broker:29092,CONTROLLER://broker:29093,SSL_HOST://localhost:9092,EXTERNAL://broker:19094,EXTERNAL_HOST://localhost:19093
       - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
       - KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS=0
       - KAFKA_TRANSACTION_STATE_LOG_MIN_ISR=1
       - KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=1
       - KAFKA_MESSAGE_MAX_BYTES=1073741824
       - KAFKA_JMX_PORT=9101
-      - KAFKA_JMX_HOSTNAME=localhost
+      - KAFKA_JMX_HOSTNAME=broker
       - KAFKA_JMX_OPTS=-Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Djava.rmi.server.hostname=kafka0 -Dcom.sun.management.jmxremote.rmi.port=9101
       - KAFKA_PROCESS_ROLES=broker,controller
       - KAFKA_CONTROLLER_QUORUM_VOTERS=1@broker:29093
-      - KAFKA_LISTENERS=PLAINTEXT://broker:29092,CONTROLLER://broker:29093,PLAINTEXT_HOST://0.0.0.0:9092
-      - KAFKA_INTER_BROKER_LISTENER_NAME=PLAINTEXT
+      - KAFKA_LISTENERS=SSL://broker:29092,CONTROLLER://broker:29093,EXTERNAL://broker:19094,EXTERNAL_HOST://0.0.0.0:19093,SSL_HOST://0.0.0.0:9092
+      - KAFKA_INTER_BROKER_LISTENER_NAME=SSL
       - KAFKA_CONTROLLER_LISTENER_NAMES=CONTROLLER
       - KAFKA_LOG_DIRS=/tmp/kraft-combined-logs
+      - KAFKA_SSL_ENABLED_PROTOCOLS=TLSv1.2,TLSv1.3
+      - KAFKA_SSL_CIPHER_SUITES=TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA384,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256
+      - KAFKA_SSL_TRUSTSTORE_LOCATION=/etc/kafka/secrets/truststore.jks
+      - KAFKA_SSL_TRUSTSTORE_CREDENTIALS=broker_keystore_creds
+      - KAFKA_SSL_TRUSTSTORE_PASSWORD=${SSL_PASSWORD}
+      # Controller SSL configuration
+      - KAFKA_CONTROLLER_SSL_ENABLED_PROTOCOLS=TLSv1.2,TLSv1.3
+      - KAFKA_CONTROLLER_SSL_CIPHER_SUITES=TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA384,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256
+      - KAFKA_SSL_KEYSTORE_CREDENTIALS=broker_keystore_creds
+      - KAFKA_SSL_KEY_CREDENTIALS=broker_sslkey_creds
+      - KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM=HTTPS
+      - KAFKA_SSL_KEYSTORE_FILENAME=kafka.broker.keystore.pkcs12
+      - KAFKA_SSL_TRUSTSTORE_FILENAME=truststore.jks
+      - KAFKA_SSL_TRUSTSTORE_CREDENTIALS=truststore_creds
       # Replace CLUSTER_ID with a unique base64 UUID using "bin/kafka-storage.sh random-uuid"
       # See https://docs.confluent.io/kafka/operations-tools/kafka-tools.html#kafka-storage-sh
       - CLUSTER_ID=MkU3OEVBNTcwNTJENDM2Qk
     volumes:
       - kafka_data:/var/lib/kafka/data
+      - ./certs/broker-creds:/etc/kafka/secrets
+      - ./certs/truststore/truststore.jks:/etc/kafka/secrets/truststore.jks:ro
+      - ./certs/truststore/truststore_creds:/etc/kafka/secrets/truststore_creds:ro
 
   schema-registry:
-    image: confluentinc/cp-schema-registry:7.8.0
+    image: confluentinc/cp-schema-registry:8.1.0
     restart: unless-stopped
     depends_on:
-      - broker
+      broker-mtls-cert-generator:
+        condition: service_completed_successfully
+        required: false
+      broker:
+        condition: service_started
     ports:
       - "8081:8081"
+    volumes:
+      - ./certs/truststore/truststore.jks:/etc/kafka/secrets/truststore.jks:ro
+      - ./certs/schema-registry-creds/schema-registry-keystore.jks:/etc/kafka/secrets/schema-registry-keystore.jks:ro
     environment:
       - SCHEMA_REGISTRY_HOST_NAME=schema-registry
-      - SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS=broker:29092
-      - SCHEMA_REGISTRY_LISTENERS=http://0.0.0.0:8081
+      - SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS=broker:19094
+      - SCHEMA_REGISTRY_KAFKASTORE_SECURITY_PROTOCOL=SSL
+      - SCHEMA_REGISTRY_KAFKASTORE_SSL_TRUSTSTORE_LOCATION=/etc/kafka/secrets/truststore.jks
+      - SCHEMA_REGISTRY_KAFKASTORE_SSL_TRUSTSTORE_PASSWORD=${SSL_PASSWORD:-SslSecurePassword@123}
+      - SCHEMA_REGISTRY_KAFKASTORE_SSL_TRUSTSTORE_TYPE=JKS
+      - SCHEMA_REGISTRY_KAFKASTORE_SSL_KEYSTORE_LOCATION=/etc/kafka/secrets/schema-registry-keystore.jks
+      - SCHEMA_REGISTRY_KAFKASTORE_SSL_KEYSTORE_PASSWORD=${SSL_PASSWORD:-SslSecurePassword@123}
+      - SCHEMA_REGISTRY_KAFKASTORE_SSL_KEY_PASSWORD=${SSL_PASSWORD:-SslSecurePassword@123}
+      - SCHEMA_REGISTRY_KAFKASTORE_SSL_KEYSTORE_TYPE=JKS
+      - SCHEMA_REGISTRY_LISTENERS=https://0.0.0.0:8081
+      - SCHEMA_REGISTRY_SSL_KEYSTORE_LOCATION=/etc/kafka/secrets/schema-registry-keystore.jks
+      - SCHEMA_REGISTRY_SSL_KEYSTORE_PASSWORD=${SSL_PASSWORD:-SslSecurePassword@123}
+      - SCHEMA_REGISTRY_SSL_KEY_PASSWORD=${SSL_PASSWORD:-SslSecurePassword@123}
+      - SCHEMA_REGISTRY_INTER_INSTANCE_PROTOCOL=https
 
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
     restart: unless-stopped
     depends_on:
-      - broker
-      - schema-registry
+      broker-mtls-cert-generator:
+        condition: service_completed_successfully
+        required: false
+      broker:
+        condition: service_started
+      schema-registry:
+        condition: service_started
     ports:
       - "9021:8080"
+    volumes:
+      - ./certs/truststore/truststore.jks:/app/truststore.jks:ro
+      - ./certs/kafka-ui-creds/kafka-ui.p12:/app/kafka-ui-keystore.p12:ro
     environment:
       - KAFKA_CLUSTERS_0_NAME=MataElangKafkaCluster
-      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=broker:29092
-      - KAFKA_CLUSTERS_0_SCHEMAREGISTRY=http://schema-registry:8081
+      - KAFKA_CLUSTERS_0_SCHEMAREGISTRY=https://schema-registry:8081
+      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=broker:19094
       - KAFKA_CLUSTERS_0_METRICS_PORT=9101
+      - KAFKA_CLUSTERS_0_METRICS_HOST=broker
+      - KAFKA_CLUSTERS_0_PROPERTIES_SECURITY_PROTOCOL=SSL
+      - KAFKA_CLUSTERS_0_PROPERTIES_SSL_TRUSTSTORE_LOCATION=/app/truststore.jks
+      - KAFKA_CLUSTERS_0_PROPERTIES_SSL_TRUSTSTORE_PASSWORD=${SSL_PASSWORD:-SslSecurePassword@123}
+      - KAFKA_CLUSTERS_0_PROPERTIES_SSL_TRUSTSTORE_TYPE=JKS
+      - KAFKA_CLUSTERS_0_PROPERTIES_SSL_KEYSTORE_LOCATION=/app/kafka-ui-keystore.p12
+      - KAFKA_CLUSTERS_0_PROPERTIES_SSL_KEYSTORE_PASSWORD=${SSL_PASSWORD:-SslSecurePassword@123}
+      - KAFKA_CLUSTERS_0_PROPERTIES_SSL_KEY_PASSWORD=${SSL_PASSWORD:-SslSecurePassword@123}
+      - KAFKA_CLUSTERS_0_PROPERTIES_SSL_KEYSTORE_TYPE=PKCS12
+      - KAFKA_CLUSTERS_0_PROPERTIES_SSL_PROTOCOL=TLS
+      - KAFKA_CLUSTERS_0_PROPERTIES_SSL_ENABLED_PROTOCOLS=TLSv1.2,TLSv1.3
       - DYNAMIC_CONFIG_ENABLED=true
+      - KAFKA_CLUSTERS_0_SCHEMAREGISTRYSSL_TRUSTSTORELOCATION=/app/truststore.jks
+      - KAFKA_CLUSTERS_0_SCHEMAREGISTRYSSL_TRUSTSTOREPASSWORD=${SSL_PASSWORD:-SslSecurePassword@123}
     deploy:
       resources:
         limits:
@@ -95,13 +192,25 @@ services:
     restart: unless-stopped
     command: "-v"
     depends_on:
-      - broker
-      - schema-registry
+      broker-mtls-cert-generator:
+        condition: service_completed_successfully
+        required: false
+      broker:
+        condition: service_started
+      schema-registry:
+        condition: service_started
+    volumes:
+      - ./certs/ca-creds/ca.pem:/app/ca.pem:ro
+      - ./certs/event-stream-aggr-creds/event-stream-aggr.p12:/app/event-stream-client.p12:ro
     environment:
-      - KAFKA_BROKERS=broker:29092
+      - KAFKA_BROKERS=broker:19094
       - INPUT_KAFKA_TOPIC=sensor_events
       - OUTPUT_KAFKA_TOPIC=snort_alerts
-      - SCHEMA_REGISTRY_URL=http://schema-registry:8081
+      - SCHEMA_REGISTRY_URL=https://schema-registry:8081
+      - SECURITY_PROTOCOL=SSL
+      - PATH_TO_CA=/app/ca.pem
+      - PATH_TO_CLIENT_KEYSTORE=/app/event-stream-client.p12
+      - CLIENT_KEYSTORE_PASSWORD=${SSL_PASSWORD:-SslSecurePassword@123}
     deploy:
       resources:
         limits:
@@ -109,7 +218,7 @@ services:
           memory: 512M
 
   opensearch-node1:
-    image: opensearchproject/opensearch:2
+    image: opensearchproject/opensearch:3
     restart: unless-stopped
     environment:
       - discovery.type=single-node
@@ -130,7 +239,7 @@ services:
       - opensearch_data1:/usr/share/opensearch/data
 
   opensearch-dashboards:
-    image: opensearchproject/opensearch-dashboards:2
+    image: opensearchproject/opensearch-dashboards:3
     restart: unless-stopped
     depends_on:
       - opensearch-node1
@@ -146,17 +255,29 @@ services:
     image: opensearchproject/logstash-oss-with-opensearch-output-plugin:8.9.0
     restart: unless-stopped
     depends_on:
-      - broker
-      - schema-registry
-      - opensearch-node1
-      - opensearch-init
+      broker-mtls-cert-generator:
+        condition: service_completed_successfully
+        required: false
+      broker:
+        condition: service_started
+      schema-registry:
+        condition: service_started
+      opensearch-node1:
+        condition: service_started
+      opensearch-init:
+        condition: service_started
     command: "-f /usr/share/logstash/config/pipeline.conf"
     volumes:
       - ./conf/pipeline.conf:/usr/share/logstash/config/pipeline.conf:ro
+      - ./certs/truststore/truststore.jks:/usr/share/logstash/config/truststore.jks:ro
+      - ./certs/logstash-creds/logstash-keystore.jks:/usr/share/logstash/config/logstash-keystore.jks:ro
     environment:
       - LS_JAVA_OPT=-Xmx512m -Xms512m
       - LOGSTASH_INTERNAL_PASSWORD=${LOGSTASH_INTERNAL_PASSWORD:-}
       - OPENSEARCH_INITIAL_ADMIN_PASSWORD=${OPENSEARCH_INITIAL_ADMIN_PASSWORD:-SecurePassword@123}
+      - SSL_TRUSTSTORE_PASSWORD=${SSL_PASSWORD:-SslSecurePassword@123}
+      - SSL_KEYSTORE_PASSWORD=${SSL_PASSWORD:-SslSecurePassword@123}
+      - SSL_KEY_PASSWORD=${SSL_PASSWORD:-SslSecurePassword@123}
     env_file:
       - .env
     deploy:
@@ -166,7 +287,7 @@ services:
           memory: 1G
 
   opensearch-init:
-    image: curlimages/curl:8.10.1
+    image: curlimages/curl:8.16.0
     restart: on-failure
     depends_on:
       - opensearch-node1
